apps/example-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: example-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example-backend
    spec:
      containers:
        - name: example-backend
          image: localhost:5001/example-backend:0.6.1
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
