apps/example-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-backend
  labels:
    app.kubernetes.io/name: example-backend
    app.kubernetes.io/part-of: local-environment
spec:
  selector:
    app.kubernetes.io/name: example-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
